--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
             font-family: "Poppins", sans-serif;
 
         }
+
+        hr {
+
+            border-top: 3px dashed rgba(0, 0, 0, 0.308);
+
+        }
+
+        #display-price li {
+            display: flex;
+            justify-content: space-around;
+
+        }
+
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
     </style>
 
 
@@ -88,9 +110,11 @@
                     tests and view the results directly within the app. The integrated testing features allow for a
                     streamlined .</p>
 
-                <button
-                    class="btn hover:bg-secondary-bg-2 hover:text-primary-bg bg-primary-bg text-black border-none">Buy
-                    Tickets</button>
+                <button class="btn hover:bg-secondary-bg-2 hover:text-primary-bg bg-primary-bg text-black border-none">
+                    <a href="#ticket-section"> Buy
+                        Tickets</a>
+
+                </button>
 
             </div>
         </div>
@@ -138,7 +162,7 @@
 
     <main class="">
         <!-- Offer section -->
-        <section class="max-w-6xl mx-auto min-h-screen raleway space-y-8 flex flex-col text-center ">
+        <section class="max-w-6xl mx-auto  raleway space-y-8 flex flex-col text-center ">
             <h1 class="font-extrabold text-4xl text-center">Best offers for you</h1>
 
             <div class="flex flex-col lg:flex-row space-y-4 lg:space-x-5">
@@ -177,17 +201,290 @@
                 </div>
             </div>
 
-            <button class="btn w-32 mx-auto border-primary-bg text-black hover:bg-primary-bg">See all offers</button>
+            <button class="btn bg-transparent w-32 mx-auto border-primary-bg text-black hover:bg-primary-bg">See all
+                offers</button>
 
         </section>
         <!-- Offer section ends here -->
 
         <!-- Ticket Interface section starts here -->
 
+        <section id="ticket-section"
+            class="bg-[#F7F8F8] border-t-2 border-t-primary-bg min-h-screen rounded-3xl pt-14 text-center flex flex-col space-y-14 *:max-w-6xl *:mx-auto mt-12">
+
+            <!-- Writing Part -->
+            <!-- *********************************************8 -->
+
+            <div class="space-y-5">
+
+                <h1 class="font-bold text-3xl">Ninja Paribahan</h1>
+                <p class="text-[16px] text-text-secondary-3 w-[40%] mx-auto">Yes, you can run unit tests and view the
+                    results directly within the app. The integrated testing features allow for a streamlined </p>
+            </div>
+            <!-- ***************************************** -->
+            <!-- Router departure -->
+            <div>
+                <div class="bg-[#ffff] w-full h-[30%] mx-auto rounded-xl flex">
+                    <!-- Ninja Paribahan -->
+                    <div class="flex-1 flex-col p-10 space-y-4">
+
+                        <div class="flex justify-between">
+                            <div class="flex space-x-3">
+                                <img src="./images/bus-logo.png" alt="">
+                                <div class="text-left w-full">
+
+                                    <h1>Ninja Paribahan</h1>
+                                    <p class="text-xs font-light text-text-secondary-3">Coach-009-WEB ! AC_Business</p>
+                                </div>
+
+                            </div>
+                            <!-- 40 seats left -->
+                            <div
+                                class="bg-secondary-bg-2 w-[35%] h-[30%] p-3 rounded-md text-primary-bg flex justify-center items-center space-x-2">
+                                <img src="./images/seat-green.png" alt="">
+                                <p class="font-bold text-[14px]"> <span id="seat-left-count">40</span> Seats left</p>
+
+                            </div>
+                        </div>
+
+                        <!-- Route Departure -->
+
+                        <div class="bg-[#F7F8F8] w-[100%] h-[75%]  rounded-lg *:flex *:justify-between p-7">
+                            <div>
+                                <h2>Route</h2>
+                                <h2>Dhaka-Sylhet</h2>
+                            </div>
+                            <hr class="mt-5">
+                            <div class="pt-3">
+                                <h2>Departure</h2>
+                                <h2>9:00 PM</h2>
+                            </div>
+                            <hr class="mt-5">
+
+                            <div class="*:bg-[#0307120D] *:w-[45%] *:h-[5%] *:p-4 space-x-5 mt-6 rounded-lg">
+                                <div>
+                                    <h1>Boarding Point - Laxmipur</h1>
+
+                                </div>
+                                <div>
+                                    Boarding Point - Laxmipur
+
+                                </div>
+                                <div>
+                                    Boarding Point - Laxmipur
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- divider -->
+                    <div>
+                        <img class="h-full w-full" src="./images/info-devider.png" alt="">
+                    </div>
+                    <!-- 550 Taka -->
+                    <div class="p-10 flex flex-col justify-center items-center">
+                        <img src="./images/fare.png" alt="">
+                        <h1 class="text-2xl font-bold">550 taka</h1>
+                        <p class="text-xs font-light text-text-secondary-3">Per Seat</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+            <!-- ************************************ -->
+            <!-- Seat Section -->
+
+            <!-- *****************************Main*********************************************** -->
+
+            <div class="bg-[#ffff] flex rounded-2xl p-24 *:p-16 mb-6">
+
+                <div class="space-y-5 w-1/2 flex-1">
+                    <h1 class="text-left font-bold text-2xl">Select Your Seat</h1>
+                    <hr>
+                    <div class="flex justify-between *:flex *:space-x-2">
+                        <div>
+
+                            <div>
+                                <img src="./images/seat-gray.png" alt="">
+                            </div>
+                            <div>
+                                <p>Available</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="./images/seat-green-filled.png" alt="">
+                            </div>
+                            <div>
+                                <p class="text-primary-bg font-medium">Selected</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <hr>
+
+
+                    <div class="flex gap-4">
+                        <div class="space-y-8 pt-3 ">
+                            <p>A</p>
+                            <p>B</p>
+                            <p>C</p>
+                            <p>D</p>
+                            <p>E</p>
+                            <p>F</p>
+                            <p>G</p>
+                            <p>H</p>
+                            <p>I</p>
+                            <p>J</p>
+                        </div>
+
+                        <div
+                            class="grid grid-cols-4 grid-rows-10 *:bg-[#F7F8F8] *:flex *:justify-center *:items-center gap-3 p-3 w-full *:border *:h-6 *:p-5 *:rounded-lg">
+                            <button class="seat">A1</button>
+                            <button class="seat">A2</button>
+                            <button class="seat">A3</button>
+                            <button class="seat">A4</button>
+                            <button class="seat">B1</button>
+                            <button class="seat">B2</button>
+                            <button class="seat">B3</button>
+                            <button class="seat">B4</button>
+                            <button class="seat">C1</button>
+                            <button class="seat">C2</button>
+                            <button class="seat">C3</button>
+                            <button class="seat">C4</button>
+                            <button class="seat">D1</button>
+                            <button class="seat">D2</button>
+                            <button class="seat">D3</button>
+                            <button class="seat">D4</button>
+                            <button class="seat">E1</button>
+                            <button class="seat">E2</button>
+                            <button class="seat">E3</button>
+                            <button class="seat">E4</button>
+                            <button class="seat">F1</button>
+                            <button class="seat">F2</button>
+                            <button class="seat">F3</button>
+                            <button class="seat">F4</button>
+                            <button class="seat">G1</button>
+                            <button class="seat">G2</button>
+                            <button class="seat">G3</button>
+                            <button class="seat">G4</button>
+                            <button class="seat">H1</button>
+                            <button class="seat">H2</button>
+                            <button class="seat">H3</button>
+                            <button class="seat">H4</button>
+                            <button class="seat">I1</button>
+                            <button class="seat">I2</button>
+                            <button class="seat">I3</button>
+                            <button class="seat">I4</button>
+                            <button class="seat">J1</button>
+                            <button class="seat">J2</button>
+                            <button class="seat">J3</button>
+                            <button class="seat">J4</button>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <!-- <div class="rotate-180">
+                    <hr>
+                </div> -->
+
+
+                <div class="w-1/2 flex-1">
+                    <!--  -->
+
+                    <h1 class="text-left font-bold text-2xl">Select Your Seat</h1>
+                    <hr class="mt-4">
+                    <div class="bg-[#F7F8F8] rounded-xl p-4 space-y-3 mt-7">
+                        <div class="flex justify-around font-medium text-text-primary">
+                            <p>Seat</p>
+                            <p>Class</p>
+                            <p>Price</p>
+                        </div>
+                        <hr>
+                        <ul id="display-price">
+
+                        </ul>
+                        <hr>
+                        <!-- Total Price -->
+                        <div class="flex justify-between font-medium text-text-primary">
+                            <h1>Total Price</h1>
+                            <p>BDT <span id="total-price">0</span></p>
+                        </div>
+                        <div id="discounted-price" class="flex justify-between font-medium text-text-primary">
+
+                        </div>
+                        <!-- coupon field -->
+                        <div class="flex items-center justify-center gap-2" id="coupon-field">
+
+
+                            <input class="rounded-xl p-3" type="text" placeholder="Have any coupon?"
+                                id="coupon-input-field">
+                            <button class="btn bg-primary-bg text-white" id="apply-btn" disabled>Apply</button>
+                        </div>
+                        <!-- Grand Total -->
+                        <div class="flex justify-between font-medium text-text-primary">
+                            <h1>Grand Total</h1>
+                            <p>BDT <span id="grand-price">0</span></p>
+                        </div>
+
+                    </div>
+
+                    <div class="space-y-4 mt-5">
+                        <label class="block text-left font-bold" for="">Passenger Name*</label>
+                        <input type="text" placeholder="Enter your name"
+                            class="input input-bordered  w-full max-w-xs" />
+                        <label class="block text-left font-bold" for="">Phone Number*</label>
+                        <input id="phone-number" type="number" placeholder="Enter your number"
+                            class="input input-bordered  w-full max-w-xs noscroll" />
+                        <label class="block text-left font-bold" for="">Email ID</label>
+                        <input type="email" placeholder="Enter your email"
+                            class="input input-bordered  w-full max-w-xs" />
+                        <button id="final-btn"
+                            class="btn btn-block bg-primary-bg text-white hover:bg-secondary-bg-1 hover:text-black" disabled>Next</button>
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+        </section>
+
+
         <!-- Ticket interface section ends here -->
 
+
     </main>
-    <footer>
+    <footer class="bg-black text-white">
+        <div class="max-w-6xl min-h-52 mx-auto flex justify-between items-center">
+
+            <div>
+                <h1>Ninja Paribahan</h1>
+                <p>P-Ticket is a digital platform to make your
+                    daily commuting better</p>
+
+            </div>
+            <div>
+                <p>Download Our App</p>
+                <img src="./icons/playstore.png.png" alt="">
+            </div>
+
+
+        </div>
+
+
 
     </footer>
 
