--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 
     <!-- Customize Css style -->
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         .raleway {
             font-family: "Raleway", sans-serif;
         }
@@ -73,6 +77,10 @@
         input[type="number"] {
             -moz-appearance: textfield;
         }
+
+        .container {
+            max-width: 1152px;
+        }
     </style>
 
 
@@ -81,7 +89,7 @@
 <body>
     <header class="max-w-6xl mx-auto space-y-5">
         <!-- NavBar starts Here -->
-        <nav class="flex justify-evenly items-center raleway pt-7">
+        <nav class="flex justify-between items-center raleway pt-7">
             <div class="text-3xl text-text-primary font-extrabold">Ninja Paribahan</div>
             <div>
                 <ul class=" hidden lg:visible lg:flex space-x-6 text-[16px] text-[#030712B3]">
@@ -100,8 +108,9 @@
             </div>
         </nav>
         <!-- NavBar Ends here -->
+
         <!-- Banner Section -->
-        <div class="bg-[url(./images/banner.png)] min-h-screen object-cover bg-no-repeat lg:relative">
+        <div class="bg-[url(./images/banner.png)] min-h-screen object-cover bg-no-repeat relative">
             <div class="w-3/4mx-auto flex flex-col justify-center items-center h-96 text-center space-y-5 pt-40">
 
                 <h2 class="text-white  text-3xl lg:text-6xl font-extrabold">End-to-End Travel with <br> <span
@@ -121,7 +130,7 @@
 
         <!-- Banner Card section -->
         <div
-            class=" p-3 lg:p-0 flex items-center  justify-center *:flex *:space-x-4 lg:absolute lg:-bottom-2 lg:left-1/2 lg:-translate-x-1/2">
+            class="flex items-center justify-center *:flex *:space-x-4 absolute top-[70%] left-1/2 -translate-x-1/2">
             <!-- Card-1 -->
             <div class="banner-card">
                 <div>
@@ -160,12 +169,12 @@
     </header>
     <!-- Header section ends here -->
 
-    <main class="">
+    <main>
         <!-- Offer section -->
-        <section class="max-w-6xl mx-auto  raleway space-y-8 flex flex-col text-center ">
-            <h1 class="font-extrabold text-4xl text-center">Best offers for you</h1>
+        <section class="max-w-6xl mx-auto raleway space-y-8 flex flex-col text-center ">
+            <h1 class="font-extrabold text-4xl text-center pt-14">Best offers for you</h1>
 
-            <div class="flex flex-col lg:flex-row space-y-4 lg:space-x-5">
+            <div class="flex flex-col lg:flex-row space-y-4 lg:space-x-5 pt-16">
 
                 <div class="bg-[#FFBF0F] w-[520px] h-[220px] rounded-3xl flex">
                     <div class="flex-1 p-10">
@@ -183,7 +192,10 @@
 
                 </div>
 
-                <div class="bg-[#F78C9C] w-[520px] h-[220px] rounded-3xl flex ">
+
+
+                <div class="bg-[#F78C9C] w-[520px] h-[220px] rounded-3xl flex" style="
+              margin-top: 0px;">
 
                     <div class="flex-1 p-10">
                         <h1 class="font-extrabold text-[32px] poppins">20% OFF</h1>
@@ -194,7 +206,7 @@
                         <img src="./images/cupon-devider.png" alt="">
                     </div>
                     <div class="p-10 flex flex-col justify-center items-center">
-                        <h1 class="text-2xl font-bold">COUPLE20</h1>
+                        <h1 class="text-2xl font-bold">Couple20</h1>
                         <p class="text-xs font-light text-text-secondary-3">Coupon Code</p>
                     </div>
 
@@ -209,21 +221,21 @@
 
         <!-- Ticket Interface section starts here -->
 
-        <section id="ticket-section"
-            class="bg-[#F7F8F8] border-t-2 border-t-primary-bg min-h-screen rounded-3xl pt-14 text-center flex flex-col space-y-14 *:max-w-6xl *:mx-auto mt-12">
 
-            <!-- Writing Part -->
+        <section id="ticket-section" class="bg-[#F7F8F8] border-t-2 border-t-primary-bg pb-52 rounded-3xl pt-14 text-center flex flex-col space-y-14 *:max-w-6xl *:mx-auto mt-12 raleway">
+
+            <!-- Heading Part -->
             <!-- *********************************************8 -->
-
             <div class="space-y-5">
 
                 <h1 class="font-bold text-3xl">Ninja Paribahan</h1>
-                <p class="text-[16px] text-text-secondary-3 w-[40%] mx-auto">Yes, you can run unit tests and view the
+                <p class="text-[16px] text-text-secondary-2 font-semibold w-[60%] mx-auto">Yes, you can run unit tests
+                    and view the
                     results directly within the app. The integrated testing features allow for a streamlined </p>
             </div>
             <!-- ***************************************** -->
-            <!-- Router departure -->
-            <div>
+            <!-- Route Departure Card -->
+            <div class="container">
                 <div class="bg-[#ffff] w-full h-[30%] mx-auto rounded-xl flex">
                     <!-- Ninja Paribahan -->
                     <div class="flex-1 flex-col p-10 space-y-4">
@@ -233,8 +245,8 @@
                                 <img src="./images/bus-logo.png" alt="">
                                 <div class="text-left w-full">
 
-                                    <h1>Ninja Paribahan</h1>
-                                    <p class="text-xs font-light text-text-secondary-3">Coach-009-WEB ! AC_Business</p>
+                                    <h1 class="font-bold text-xl">Ninja Paribahan</h1>
+                                    <p class="text-[18px] font-normal text-text-primary">Coach-009-WEB ! AC_Business</p>
                                 </div>
 
                             </div>
@@ -242,7 +254,8 @@
                             <div
                                 class="bg-secondary-bg-2 w-[35%] h-[30%] p-3 rounded-md text-primary-bg flex justify-center items-center space-x-2">
                                 <img src="./images/seat-green.png" alt="">
-                                <p class="font-bold text-[14px]"> <span id="seat-left-count">40</span> Seats left</p>
+                                <p class="font-bold text-[14px] poppins"> <span id="seat-left-count">40</span> Seats
+                                    left</p>
 
                             </div>
                         </div>
@@ -250,28 +263,29 @@
                         <!-- Route Departure -->
 
                         <div class="bg-[#F7F8F8] w-[100%] h-[75%]  rounded-lg *:flex *:justify-between p-7">
-                            <div>
-                                <h2>Route</h2>
-                                <h2>Dhaka-Sylhet</h2>
+                            <div class="font-bold text-[18px]">
+                                <h2 class="text-text-secondary-2">Route</h2>
+                                <h2 class="text-text-primary">Dhaka-Sylhet</h2>
                             </div>
                             <hr class="mt-5">
-                            <div class="pt-3">
-                                <h2>Departure</h2>
-                                <h2>9:00 PM</h2>
+                            <div class="pt-3 font-bold text-[18px] ">
+                                <h2 class="text-text-secondary-2">Departure</h2>
+                                <h2 class="text-text-primary">9:00 PM</h2>
                             </div>
                             <hr class="mt-5">
 
-                            <div class="*:bg-[#0307120D] *:w-[45%] *:h-[5%] *:p-4 space-x-5 mt-6 rounded-lg">
+                            <div
+                                class="*:bg-[#0307120D]  *:flex *:justify-center *:items-center  *:p-6 space-x-5 mt-6 *:rounded-xl font-bold text-sm text-text-secondary-3">
                                 <div>
                                     <h1>Boarding Point - Laxmipur</h1>
 
                                 </div>
                                 <div>
-                                    Boarding Point - Laxmipur
+                                    Dropping Point - Bogura
 
                                 </div>
                                 <div>
-                                    Boarding Point - Laxmipur
+                                    Est. Time - 11 Hour
 
                                 </div>
                             </div>
@@ -284,14 +298,13 @@
                         <img class="h-full w-full" src="./images/info-devider.png" alt="">
                     </div>
                     <!-- 550 Taka -->
-                    <div class="p-10 flex flex-col justify-center items-center">
+                    <div class="p-10 flex flex-col justify-center items-center space-y-3">
                         <img src="./images/fare.png" alt="">
                         <h1 class="text-2xl font-bold">550 taka</h1>
-                        <p class="text-xs font-light text-text-secondary-3">Per Seat</p>
+                        <p class="text-[16px] font-semibold text-text-secondary-3">Per Seat</p>
                     </div>
 
                 </div>
-
 
             </div>
 
@@ -299,10 +312,9 @@
             <!-- Seat Section -->
 
             <!-- *****************************Main*********************************************** -->
+            <div class="container bg-[#ffff] flex rounded-2xl">
 
-            <div class="bg-[#ffff] flex rounded-2xl p-24 *:p-16 mb-6">
-
-                <div class="space-y-5 w-1/2 flex-1">
+                <div class="space-y-5 w-[60%] p-5">
                     <h1 class="text-left font-bold text-2xl">Select Your Seat</h1>
                     <hr>
                     <div class="flex justify-between *:flex *:space-x-2">
@@ -326,6 +338,13 @@
                         </div>
                     </div>
                     <hr>
+
+                    <div class="flex">
+                        <div class="flex-1"></div>
+                        <div class="m-3 bg-[#0307121A] p-4 w-[20%] flex justify-center items-center rounded-2xl">
+                            <img src="./images/wheel.png" alt="">
+                        </div>
+                    </div>
 
 
                     <div class="flex gap-4">
@@ -392,19 +411,20 @@
                 </div>
 
 
-                <!-- <div class="rotate-180">
-                    <hr>
-                </div> -->
+                <div class="my-6">
+                    <img class="w-full h-full" src="./images/Line 1.png" alt="">
+                </div>
 
 
-                <div class="w-1/2 flex-1">
+                <div class="p-5 w-2/5">
                     <!--  -->
 
                     <h1 class="text-left font-bold text-2xl">Select Your Seat</h1>
                     <hr class="mt-4">
                     <div class="bg-[#F7F8F8] rounded-xl p-4 space-y-3 mt-7">
                         <div class="flex justify-around font-medium text-text-primary">
-                            <p>Seat</p>
+                            <p>Seat <sup id="ticket-count" class="w-6 h-6 bg-primary-bg p-1 rounded-full">0</sup>
+                            </p>
                             <p>Class</p>
                             <p>Price</p>
                         </div>
@@ -425,7 +445,7 @@
                         <div class="flex items-center justify-center gap-2" id="coupon-field">
 
 
-                            <input class="rounded-xl p-3" type="text" placeholder="Have any coupon?"
+                            <input class="rounded-xl p-3 flex-1" type="text" placeholder="Have any coupon?"
                                 id="coupon-input-field">
                             <button class="btn bg-primary-bg text-white" id="apply-btn" disabled>Apply</button>
                         </div>
@@ -437,8 +457,9 @@
 
                     </div>
 
-                    <div class="space-y-4 mt-5">
+                    <div class="space-y-4 mt-5 flex flex-col">
                         <label class="block text-left font-bold" for="">Passenger Name*</label>
+
                         <input type="text" placeholder="Enter your name"
                             class="input input-bordered  w-full max-w-xs" />
                         <label class="block text-left font-bold" for="">Phone Number*</label>
@@ -447,9 +468,39 @@
                         <label class="block text-left font-bold" for="">Email ID</label>
                         <input type="email" placeholder="Enter your email"
                             class="input input-bordered  w-full max-w-xs" />
-                        <button id="final-btn"
-                            class="btn btn-block bg-primary-bg text-white hover:bg-secondary-bg-1 hover:text-black" disabled>Next</button>
+                        <!-- <button id="final-btn"
+                            class="btn btn-block bg-primary-bg text-white hover:bg-secondary-bg-1 hover:text-black"
+                            disabled>Next</button> -->
 
+
+                        <!-- Modallll -->
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button disabled id="final-btn"
+                            class="btn btn-block bg-primary-bg text-white hover:bg-secondary-bg-1 hover:text-black"
+                            onclick="my_modal_1.showModal()">Next</button>
+                        <dialog id="my_modal_1" class="modal poppins">
+                            <div class="modal-box flex flex-col justify-center items-center">
+                                <img class="w-12 h-12" src="./images/success.png" alt="">
+                                <h3 class="font-bold text-2xl text-primary-bg uppercase pt-6">Success</h3>
+                                <p class="py-4 font-bold">Thank you for Booking Our Bus Seats. We are working hard to
+                                    find the
+                                    best service and deals for you.</p>
+                                <p class="text-text-secondary-3 text-sm"> Shortly you will find a confirmation in your
+                                    email.</p>
+                                <div class="modal-action">
+                                    <form method="dialog">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button onclick="reset()"
+                                            class="btn bg-primary-bg text-white hover:bg-secondary-bg-1 hover:text-black ">Continue</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </dialog>
+
+                        <div class="flex justify-between underline">
+                            <p>Terms & Conditions</p>
+                            <p>Cancellation Policy</p>
+                        </div>
 
 
                     </div>
@@ -458,36 +509,53 @@
 
             </div>
 
-
-
         </section>
-
-
         <!-- Ticket interface section ends here -->
 
-
     </main>
-    <footer class="bg-black text-white">
+
+    <footer class="bg-black text-white raleway">
         <div class="max-w-6xl min-h-52 mx-auto flex justify-between items-center">
 
-            <div>
-                <h1>Ninja Paribahan</h1>
-                <p>P-Ticket is a digital platform to make your
+            <div class="space-y-3">
+                <h1 class="text-3xl font-bold">Ninja Paribahan</h1>
+                <p class="text-left text-[#FFFFFFCC] w-[60%]">P-Ticket is a digital platform to make your
                     daily commuting better</p>
 
             </div>
-            <div>
-                <p>Download Our App</p>
-                <img src="./icons/playstore.png.png" alt="">
+            <div class="flex flex-col justify-start items-start space-y-4">
+                <p class="font-bold">Download Our App</p>
+                <div class="flex gap-2 justify-center items-center">
+
+                    <img src="./icons/playstore.png.png" alt="">
+                    <h1 class="font-bold text-2xl">Google Play</h1>
+                </div>
             </div>
 
 
+        </div>
+        <hr class="border-t-white mx-16">
+        <div class="flex justify-between max-w-6xl min-h-52 mx-auto mt-6">
+            <div>
+                <h1 class=" text-[#FFFFFFCC]">All Rights are reserved @ 2024</h1>
+
+            </div>
+            <div class="flex raleway space-x-5">
+                <p>Teams & Conditions</p>
+                <p>Refund Policy</p>
+                <p>Privacy Policy</p>
+            </div>
         </div>
 
 
 
     </footer>
 
+
+
+
+    <!-- Javascript Links -->
+    <script src="./scripts/utility.js"></script>
     <script src="./scripts/script.js"></script>
 
 </body>
