Updated html file

--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 
                 <h2 class="text-white  text-3xl lg:text-6xl font-extrabold">End-to-End Travel with <br> <span
                         class="text-primary-bg">Ninja Paribahan</span></h2>
-                <p class=" w-[300px] lg:w-[500px] text-white text-xs lg:text-[16px] font-normal">Yes, you can run unit
-                    tests and view the results directly within the app. The integrated testing features allow for a
-                    streamlined .</p>
+                <p class=" w-[300px] lg:w-[500px] text-white text-xs lg:text-[16px] font-normal">Discover Seamless Travel with Ninja Paribahan. !Hassle-free booking system, choose your seats, and pay securely online.</p>
 
                 <button class="btn hover:bg-secondary-bg-2 hover:text-primary-bg bg-primary-bg text-black border-none">
                     <a href="#ticket-section"> Buy
@@ -206,7 +204,7 @@
                         <img src="./images/cupon-devider.png" alt="">
                     </div>
                     <div class="p-10 flex flex-col justify-center items-center">
-                        <h1 class="text-2xl font-bold">Couple20</h1>
+                        <h1 class="text-2xl font-bold">Couple 20</h1>
                         <p class="text-xs font-light text-text-secondary-3">Coupon Code</p>
                     </div>
 
@@ -229,9 +227,7 @@
             <div class="space-y-5">
 
                 <h1 class="font-bold text-3xl">Ninja Paribahan</h1>
-                <p class="text-[16px] text-text-secondary-2 font-semibold w-[60%] mx-auto">Yes, you can run unit tests
-                    and view the
-                    results directly within the app. The integrated testing features allow for a streamlined </p>
+                <p class="text-[16px] text-text-secondary-2 font-semibold w-[60%] mx-auto">Traveling with family? Check out our packages for even bigger savings. Book now and travel later! Flexible booking options available to suit your schedule.gi</p>
             </div>
             <!-- ***************************************** -->
             <!-- Route Departure Card -->
